update main.css - fixed issue with hamburger menu links not aligning correctly in the center

--- a/main.css
+++ b/main.css
@@ -381,9 +381,12 @@ footer{
         top: 70px; /* Adjust this value as needed */
         right: 20px;
         display: none;
-        background-color: white;
-        color: #121216 ;
-        min-width: 100vw;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #000000;
+        color: #eff8fa;
+        min-width: 75vw;
         height: 100vh;
     }
 
@@ -396,15 +399,14 @@ footer{
     }
 
     .active-navbar {
-        display: block;
+        display: flex;
     }
 
     .navigation-bar li {
-        display: block;
-        text-align: center;
-        margin: 50px auto;
+        margin: 15px 0;
+       padding: 2px;
     }
-}
+} 
 
 @media (min-width: 320px) and (max-width: 479px){
     body h1{
